--- a/po/nl.po
+++ b/po/nl.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-18 11:21+0000\n"
+"PO-Revision-Date: 2025-03-22 12:43+0000\n"
 "Last-Translator: Vistaus <vistaus@noreply.codeberg.org>\n"
-"Language-Team: Dutch <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
+"Language-Team: Dutch <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,11 +39,8 @@ msgid "Preferences"
 msgstr "Voorkeuren"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:6
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Failed to set wallpaper"
 msgid "Your daily wallpaper"
-msgstr "Instellen mislukt"
+msgstr "Uw dagelijkse achtergrond"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:8
 msgid ""
@@ -102,10 +99,12 @@ msgid ""
 "Start automatically and refresh the daily wallpaper automatically every "
 "twelve hours."
 msgstr ""
+"Start de toepassing automatisch op en pas iedere twaalf uur de nieuwe, "
+"dagelijkse achtergrond toe."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:48
 msgid "No longer support multiple windows."
-msgstr ""
+msgstr "Meerdere vensters worden niet meer ondersteund."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:58
 msgid ""
@@ -196,12 +195,9 @@ msgid "Set current image as wallpaper"
 msgstr "Stel de huidige afbeelding in als achtergrond"
 
 #: resources/ui/application-window.blp:91
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Failed to set wallpaper"
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Set daily wallpaper automatically"
-msgstr "Instellen mislukt"
+msgstr "Stel de dagelijkse achtergrond automatisch in"
 
 #: resources/ui/application-window.blp:103
 msgctxt "main-window.toolbar.button.tooltip"
@@ -291,14 +287,12 @@ msgid "Enabled collections"
 msgstr "Ingeschakelde collecties"
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:5
-#, fuzzy
-#| msgid "The identifier of the last selected source."
 msgid "The identifier the selected source."
-msgstr "De identificatiecode van de laatstgekozen bron."
+msgstr "De identificatiecode van de gekozen bron."
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:9
 msgid "Whether to set the wallpaper automatically."
-msgstr ""
+msgstr "Of de achtergrond automatisch moet worden ingesteld."
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:14
 msgid ""
@@ -338,23 +332,16 @@ msgid "Helpful services"
 msgstr "Nuttige diensten"
 
 #: src/app.rs:155
-#, fuzzy
-#| msgid "Contact information"
 msgctxt "notification.button.label"
 msgid "Contact information"
 msgstr "Contactgegevens"
 
 #: src/app.rs:160
-#, fuzzy
-#| msgid "Open preferences"
 msgctxt "notification.button.label"
 msgid "Open preferences"
 msgstr "Voorkeuren openen"
 
 #: src/app.rs:164
-#, fuzzy
-#| msgctxt "alert.response"
-#| msgid "Open URL"
 msgctxt "notification.button.label"
 msgid "Open URL"
 msgstr "Link openen"
@@ -367,7 +354,7 @@ msgstr "Voorkeuren openen"
 #: src/app.rs:546
 msgctxt "portal.request-background.reason"
 msgid "Automatically fetch and set wallpaper in background"
-msgstr ""
+msgstr "Haal de achtergrond automatisch op en stel deze in"
 
 #: src/app/model/error_notification.rs:41
 msgctxt "error-notification.title"
@@ -554,8 +541,6 @@ msgstr[0] "%1/%2 collectie ingeschakeld"
 msgstr[1] "%1/%2 collecties ingeschakeld"
 
 #: src/main.rs:89
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgctxt "application-name"
 msgid "Picture Of The Day"
 msgstr "Afbeelding van de dag"
