--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-21 15:19+0000\n"
+"PO-Revision-Date: 2025-03-30 16:26+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,14 +43,10 @@ msgid "Your daily wallpaper"
 msgstr "Dein täglicher Bildschirmhintergrund"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:8
-#, fuzzy
-#| msgid ""
-#| "Get a picture of the day from any of the following sources as your daily "
-#| "wallpaper."
 msgid ""
 "Get a picture of the day from the following sources as your daily wallpaper."
 msgstr ""
-"Erhalte ein Bild des Tages aus einer der folgenden Quellen als täglichen "
+"Erhalte ein Bild des Tages aus den folgenden Quellen als täglichen "
 "Bildschirmhintergrund."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:10
@@ -74,6 +70,8 @@ msgid ""
 "Preview images, pick your favorite source, enable automatic updates, and "
 "enjoy a fresh wallpaper every day."
 msgstr ""
+"Betrachte verfügbare Bilder, wähle Deine bevorzugte Quelle, aktiviere die "
+"automatische Aktualisierung, und genieße jeden Tag ein neues Hintergrundbild."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:16
 msgid ""
@@ -106,23 +104,24 @@ msgstr "Kunstwerk"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:48
 msgid "Use a more reliable endpoint for Wikimedia images."
-msgstr ""
+msgstr "Für Wikimedia Bilder wird ein zuverlässigerer Endpunkt genutzt."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:49
 msgid "No longer show preview when setting a wallpaper."
 msgstr ""
+"Beim Setzen des Hintergrundbilds wird keine separate Vorschau mehr angezeigt."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
 msgid "Improve scheduling of automatic downloads."
-msgstr ""
+msgstr "Die Planung automatischer Downloads wurde verbessert."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
 msgid "Remember window size and state."
-msgstr ""
+msgstr "Die Größe und der Zustand des Fensters werden gespeichert."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:52
 msgid "Update to GNOME 48."
-msgstr ""
+msgstr "Die Anwendung wurde auf GNOME 48 aktualisiert."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:62
 msgid ""
@@ -158,7 +157,7 @@ msgstr "Das Bild des Tages von Wikimedia"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:90
 msgid "The preferences dialog with settings for image sources"
-msgstr ""
+msgstr "Der Einstellungsdialog mit Einstellungen der Bildquellen"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:94
 msgid "The empty greeting page with the application icon"
