--- a/po/fi.po
+++ b/po/fi.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-10 10:21+0000\n"
+"PO-Revision-Date: 2025-03-23 13:21+0000\n"
 "Last-Translator: artnay <artnay@noreply.codeberg.org>\n"
-"Language-Team: Finnish <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/fi/>\n"
+"Language-Team: Finnish <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/fi/>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,11 +39,8 @@ msgid "Preferences"
 msgstr "Asetukset"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:6
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Failed to set wallpaper"
 msgid "Your daily wallpaper"
-msgstr "Taustakuvan asettaminen epäonnistui"
+msgstr "Päivittäinen taustakuva"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:8
 msgid ""
@@ -100,6 +97,8 @@ msgid ""
 "Start automatically and refresh the daily wallpaper automatically every "
 "twelve hours."
 msgstr ""
+"Käynnistä automaattisesti ja päivitä päivittäinen taustakuva 12 tunnin "
+"välein."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:48
 msgid "No longer support multiple windows."
@@ -193,12 +192,9 @@ msgid "Set current image as wallpaper"
 msgstr "Aseta nykyinen kuva taustakuvaksi"
 
 #: resources/ui/application-window.blp:91
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Failed to set wallpaper"
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Set daily wallpaper automatically"
-msgstr "Taustakuvan asettaminen epäonnistui"
+msgstr "Aseta päivittäinen taustakuva automaattisesti"
 
 #: resources/ui/application-window.blp:103
 msgctxt "main-window.toolbar.button.tooltip"
@@ -295,7 +291,7 @@ msgstr "Viimeksi valitun lähteen tunniste."
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:9
 msgid "Whether to set the wallpaper automatically."
-msgstr ""
+msgstr "Asetetaanko taustakuva automaattisesti."
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:14
 msgid ""
@@ -331,23 +327,16 @@ msgid "Helpful services"
 msgstr "Hyödylliset palvelut"
 
 #: src/app.rs:155
-#, fuzzy
-#| msgid "Contact information"
 msgctxt "notification.button.label"
 msgid "Contact information"
 msgstr "Yhteystiedot"
 
 #: src/app.rs:160
-#, fuzzy
-#| msgid "Open preferences"
 msgctxt "notification.button.label"
 msgid "Open preferences"
 msgstr "Avaa asetukset"
 
 #: src/app.rs:164
-#, fuzzy
-#| msgctxt "alert.response"
-#| msgid "Open URL"
 msgctxt "notification.button.label"
 msgid "Open URL"
 msgstr "Avaa osoite"
@@ -360,7 +349,7 @@ msgstr "Avaa asetukset"
 #: src/app.rs:546
 msgctxt "portal.request-background.reason"
 msgid "Automatically fetch and set wallpaper in background"
-msgstr ""
+msgstr "Nouda ja aseta taustakuva automaattisesti taustalla"
 
 #: src/app/model/error_notification.rs:41
 msgctxt "error-notification.title"
@@ -520,8 +509,6 @@ msgstr[0] "%1/%2 kokoelma käytössä"
 msgstr[1] "%1/%2 kokoelmaa käytössä"
 
 #: src/main.rs:89
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgctxt "application-name"
 msgid "Picture Of The Day"
 msgstr "Päivän kuva"
