--- a/po/fi.po
+++ b/po/fi.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-23 13:21+0000\n"
-"Last-Translator: artnay <artnay@noreply.codeberg.org>\n"
-"Language-Team: Finnish <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/fi/>\n"
+"PO-Revision-Date: 2025-04-02 08:21+0000\n"
+"Last-Translator: Ricky-Tigg <ricky-tigg@noreply.codeberg.org>\n"
+"Language-Team: Finnish <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/fi/>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,17 +43,13 @@ msgid "Your daily wallpaper"
 msgstr "Päivittäinen taustakuva"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:8
-#, fuzzy
-#| msgid ""
-#| "Get a picture of the day from any of the following sources as your daily "
-#| "wallpaper."
 msgid ""
 "Get a picture of the day from the following sources as your daily wallpaper."
-msgstr "Aseta taustakuvaksi päivän kuva seuraavista lähteistä."
+msgstr "Hanki kuva päivästä seuraavista lähteistä päivittäiseksi taustakuvaksi."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:10
 msgid "NASA Astronomy Picture Of The Day"
-msgstr ""
+msgstr "NASA-tähtitieteen päivän kuva"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:11
 msgid "Bing"
@@ -61,7 +57,7 @@ msgstr "Bing"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:12
 msgid "Simon Stålenhag Artwork"
-msgstr "Simon Stålenhag Artwork"
+msgstr "Simon Stålenhagin taideteos"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:13
 msgid "Wikimedia Picture Of The Day"
@@ -72,6 +68,8 @@ msgid ""
 "Preview images, pick your favorite source, enable automatic updates, and "
 "enjoy a fresh wallpaper every day."
 msgstr ""
+"Esikatsele kuvia, valitse suosikkilähteesi, ota käyttöön automaattiset "
+"päivitykset ja nauti uudesta taustakuvasta joka päivä."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:16
 msgid ""
@@ -99,27 +97,27 @@ msgstr "Tähtitiede"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:26
 msgid "Artwork"
-msgstr ""
+msgstr "Taideteos"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:48
 msgid "Use a more reliable endpoint for Wikimedia images."
-msgstr ""
+msgstr "Käytä luotettavampaa päätepistettä Wikimedia-kuville."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:49
 msgid "No longer show preview when setting a wallpaper."
-msgstr ""
+msgstr "Älä enää näytä esikatselua taustakuvaa asetettaessa."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
 msgid "Improve scheduling of automatic downloads."
-msgstr ""
+msgstr "Paranna automaattisten latausten ajoitusta."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:51
 msgid "Remember window size and state."
-msgstr ""
+msgstr "Muista ikkunan koko ja tila."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:52
 msgid "Update to GNOME 48."
-msgstr ""
+msgstr "Päivitys GNOME 48:aan."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:62
 msgid ""
@@ -131,7 +129,7 @@ msgstr ""
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:63
 msgid "No longer support multiple windows."
-msgstr ""
+msgstr "Ei enää tue useita ikkunoita."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:73
 msgid ""
@@ -146,6 +144,8 @@ msgid ""
 "Add a main window to show today's picture of the day and a button to set it "
 "as current wallpaper."
 msgstr ""
+"Lisää pääikkuna näyttääksesi tämän päivän kuvan ja painike asettaaksesi sen "
+"nykyiseksi taustakuvaksi."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:86
 msgid "A picture of the day from Wikimedia"
@@ -153,7 +153,7 @@ msgstr "Päivän kuva Wikimediasta"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:90
 msgid "The preferences dialog with settings for image sources"
-msgstr ""
+msgstr "Asetukset-valintaikkuna, jossa on kuvalähteiden asetukset"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:94
 msgid "The empty greeting page with the application icon"
@@ -317,10 +317,8 @@ msgid "Enabled collections"
 msgstr "Käytössä olevat kokoelmat"
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:5
-#, fuzzy
-#| msgid "The identifier of the last selected source."
 msgid "The identifier the selected source."
-msgstr "Viimeksi valitun lähteen tunniste."
+msgstr "Valitun lähteen tunniste."
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:9
 msgid "Whether to set the wallpaper automatically."
@@ -332,6 +330,9 @@ msgid ""
 "fine, but if you find that you are rate-limited, you may wish to use your "
 "own API key, which you can obtain free of charge at https://api.nasa.gov/."
 msgstr ""
+"Käytettävä API-avain APOD API:n pyyntöihin. Oletusavain on yleensä sopiva, "
+"mutta jos huomaat, että nopeus on rajoitettu, voit halutessasi käyttää omaa "
+"API-avainta, jonka voit hankkia ilmaiseksi https://api.nasa.gov/ :sta."
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:24
 msgid "Collections from Stålenhag which to ignore."
@@ -401,7 +402,7 @@ msgstr ""
 #: src/app/model/error_notification.rs:60
 msgctxt "error-notification.title"
 msgid "Picture Of The Day was rate-limited"
-msgstr ""
+msgstr "Päivän kuvan bittinopeus oli rajoitettu"
 
 #: src/app/model/error_notification.rs:65
 msgctxt "error-notification.description"
@@ -409,6 +410,8 @@ msgid ""
 "The %1 server is rate-limited and does currently not allow you to fetch an "
 "image. Try again later, or try a different source."
 msgstr ""
+"Palvelimen %1 bittinopeus on rajoitettu, eikä se tällä hetkellä salli kuvan "
+"noutamista. Yritä myöhemmin uudelleen tai kokeile toista lähdettä."
 
 #: src/app/model/error_notification.rs:74
 #: src/app/model/error_notification.rs:87
@@ -431,6 +434,8 @@ msgid ""
 "Today, %1 provides a video or another type of media which this application "
 "does not support. Try again tomorrow, or try a different source."
 msgstr ""
+"Tänään, %1 tarjoaa videon tai muun tyyppisen median, jota tämä sovellus ei "
+"tue. Yritä huomenna uudelleen tai kokeile toista lähdettä."
 
 #: src/app/model/error_notification.rs:103
 #: src/app/model/error_notification.rs:121
@@ -446,6 +451,9 @@ msgid ""
 "currently. Try again later, or try a different source. If the issue persists "
 "please report the problem."
 msgstr ""
+"Palvelin %s vastasi HTTP-tilalla %2. Palvelimessa saattaa olla tällä "
+"hetkellä ongelmia. Yritä myöhemmin uudelleen tai kokeile toista lähdettä. "
+"Jos ongelma jatkuu, ilmoita ongelmasta."
 
 #: src/app/model/error_notification.rs:125
 msgctxt "error-notification.description"
@@ -454,6 +462,9 @@ msgid ""
 "currently. Try again later, or try a different source. If the issue persists "
 "please report the problem."
 msgstr ""
+"Palvelin %1 vastasi epäkelvollisilla tiedoilla. Palvelimessa saattaa olla "
+"tällä hetkellä ongelmia. Yritä myöhemmin uudelleen tai kokeile toista "
+"lähdettä. Jos ongelma jatkuu, ilmoita ongelmasta."
 
 #: src/app/model/error_notification.rs:135
 msgctxt "error-notification.title"
@@ -477,6 +488,9 @@ msgid ""
 "following message: %2. Your system appears to have only limited network "
 "connectivity. Try to connect your system to the internet."
 msgstr ""
+"Syöttö/lähtövirhe noudettaessa tämän päivän kuvaa %1:sta, seuraavalla "
+"viestillä: %2. Järjestelmälläsi näyttää olevan vain rajoitettu verkkoyhteys. "
+"Yritä yhdistää järjestelmäsi Internetiin."
 
 #: src/app/model/error_notification.rs:166
 msgctxt "error-notification.description"
@@ -485,6 +499,9 @@ msgid ""
 "following message: %2. Try again later, or try a different source. If the "
 "issue persists please report the problem."
 msgstr ""
+"Tapahtui syöttö/lähtövirhe noudettaessa tämän päivän kuvaa %1:sta, ja "
+"seuraava viesti: %2. Yritä myöhemmin uudelleen tai kokeile toista lähdettä. "
+"Jos ongelma jatkuu, ilmoita ongelmasta."
 
 #: src/app/widgets/application_window.rs:70
 msgctxt "error-notification.description"
@@ -492,6 +509,8 @@ msgid ""
 "An I/O error occurred while opening %1, with the following message: %2. If "
 "the issue persists please report the problem."
 msgstr ""
+"Tapahtui syöttö/lähtövirhe avattaessa %1, seuraavalla viestillä: %2. Jos "
+"ongelma jatkuu, ilmoita ongelmasta."
 
 #: src/app/widgets/application_window.rs:76
 msgctxt "error-notification.title"
@@ -504,6 +523,8 @@ msgid ""
 "An I/O error occurred while setting the wallpaper, with the following "
 "message: %1. If the issue persists please report the problem."
 msgstr ""
+"Tapahtui syöttö/lähtövirhe taustakuvaa asetettaessa, seuraavalla viestillä: "
+"%1. Jos ongelma jatkuu, ilmoita ongelmasta."
 
 #: src/app/widgets/application_window.rs:101
 msgctxt "error-notification.title"
@@ -549,7 +570,7 @@ msgstr "Päivän kuva"
 #: src/source.rs:60
 msgctxt "source name"
 msgid "NASA Astronomy Picture Of The Day"
-msgstr ""
+msgstr "NASA-tähtitieteen päivän kuva"
 
 #: src/source.rs:61
 msgctxt "source name"
@@ -581,13 +602,13 @@ msgstr "Kokoelma: %s"
 #, c-format
 msgctxt "source.wikimedia.copyright"
 msgid "%artist (%credit, %license)"
-msgstr ""
+msgstr "%artist (%credit, %license)"
 
 #: src/source/wikimedia.rs:66
 #, c-format
 msgctxt "source.wikimedia.copyright"
 msgid "%artist (%license)"
-msgstr ""
+msgstr "%artist (%license)"
 
 #: src/source/wikimedia.rs:75
 msgctxt "source.wikimedia.copyright"
