--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-30 16:26+0000\n"
+"PO-Revision-Date: 2025-04-04 08:39+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -106,11 +106,15 @@ msgstr "Kunstwerk"
 msgid ""
 "Add overlay toolbar to go to the previous or next image to the image view."
 msgstr ""
+"Der Bildansicht wurde eine schwebende Werkzeugleiste hinzugefügt, um zum "
+"vorherigen und zum nächsten Bild zu springen."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:49
 msgid ""
 "Add toolbar button to open the current image in an external application."
 msgstr ""
+"Zur Werkzeugleiste wurde eine Schaltfläche hinzugefügt, um das aktuelle Bild "
+"in einer externen Anwendung zu öffnen."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:59
 msgid "Use a more reliable endpoint for Wikimedia images."
@@ -219,25 +223,19 @@ msgid "Toggle sidebar"
 msgstr "Seitenleiste umschalten"
 
 #: resources/gtk/help-overlay.blp:57
-#, fuzzy
-#| msgctxt "start-page.button.label"
-#| msgid "Get images"
 msgctxt "shortcuts group title"
 msgid "Navigate images"
-msgstr "Bilder erhalten"
+msgstr "Zwischen Bildern springen"
 
 #: resources/gtk/help-overlay.blp:60 resources/gtk/help-overlay.blp:65
 msgctxt "shortcut description"
 msgid "Previous image"
-msgstr ""
+msgstr "Vorheriges Bild"
 
 #: resources/gtk/help-overlay.blp:70 resources/gtk/help-overlay.blp:75
-#, fuzzy
-#| msgctxt "start-page.button.label"
-#| msgid "Get images"
 msgctxt "shortcut description"
 msgid "Next image"
-msgstr "Bilder erhalten"
+msgstr "Nächstes Bild"
 
 #: resources/ui/application-window.blp:30
 msgctxt "main-window.toolbar.button.tooltip"
@@ -579,27 +577,19 @@ msgid "Failed to set wallpaper"
 msgstr "Setzen des Bildschirmhintergrunds fehlgeschlagen"
 
 #: src/app/widgets/application_window.rs:128
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while opening %1, with the following message: %2. "
-#| "If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while opening the current image, with the following "
 "message: %1. If the issue persists please report the problem."
 msgstr ""
-"Ein I/O Fehler ist aufgetreten beim Öffnen von %1, mit der folgenden "
-"Fehlermeldung: %2. Falls das Problem bestehen bleibt, melde das Problem "
-"bitte."
+"Ein I/O Fehler ist aufgetreten beim Öffnen des aktuellen Bilds, mit der "
+"folgenden Fehlermeldung: %1. Falls das Problem bestehen bleibt, melde das "
+"Problem bitte."
 
 #: src/app/widgets/application_window.rs:134
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Failed to open source URL"
 msgctxt "error-notification.title"
 msgid "Failed to open image"
-msgstr "Öffnen der URL der Quelle fehlgeschlagen"
+msgstr "Öffnen des Bilds fehlgeschlagen"
 
 #: src/app/widgets/application_window.rs:151
 msgctxt "alert.response"
