--- a/po/nl.po
+++ b/po/nl.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-31 19:21+0000\n"
+"PO-Revision-Date: 2025-04-04 08:39+0000\n"
 "Last-Translator: Vistaus <vistaus@noreply.codeberg.org>\n"
-"Language-Team: Dutch <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
+"Language-Team: Dutch <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -105,11 +105,15 @@ msgstr "Kunst"
 msgid ""
 "Add overlay toolbar to go to the previous or next image to the image view."
 msgstr ""
+"Toon een werkbalk boven de foto's om naar de vorige of volgende afbeelding "
+"te gaan."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:49
 msgid ""
 "Add toolbar button to open the current image in an external application."
 msgstr ""
+"Toon een werkbalkknop boven de huidige afbeelding om hem in een externe "
+"toepassing te openen."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:59
 msgid "Use a more reliable endpoint for Wikimedia images."
@@ -218,25 +222,19 @@ msgid "Toggle sidebar"
 msgstr "Zijbalk tonen/verbergen"
 
 #: resources/gtk/help-overlay.blp:57
-#, fuzzy
-#| msgctxt "start-page.button.label"
-#| msgid "Get images"
 msgctxt "shortcuts group title"
 msgid "Navigate images"
-msgstr "Afbeeldingen ophalen"
+msgstr "Vorige/Volgende afbeelding"
 
 #: resources/gtk/help-overlay.blp:60 resources/gtk/help-overlay.blp:65
 msgctxt "shortcut description"
 msgid "Previous image"
-msgstr ""
+msgstr "Vorige afbeelding"
 
 #: resources/gtk/help-overlay.blp:70 resources/gtk/help-overlay.blp:75
-#, fuzzy
-#| msgctxt "start-page.button.label"
-#| msgid "Get images"
 msgctxt "shortcut description"
 msgid "Next image"
-msgstr "Afbeeldingen ophalen"
+msgstr "Volgende afbeelding"
 
 #: resources/ui/application-window.blp:30
 msgctxt "main-window.toolbar.button.tooltip"
@@ -264,11 +262,9 @@ msgid "Set current image as wallpaper"
 msgstr "Stel de huidige afbeelding in als achtergrond"
 
 #: resources/ui/application-window.blp:102
-#, fuzzy
-#| msgid "The empty greeting page with the application icon"
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Open image with default application"
-msgstr "Welkomstscherm met toepassingspictogram"
+msgstr "Afbeelding openen in standaard fotoprogramma"
 
 #: resources/ui/application-window.blp:113
 msgctxt "main-window.toolbar.button.tooltip"
@@ -581,27 +577,19 @@ msgid "Failed to set wallpaper"
 msgstr "Instellen mislukt"
 
 #: src/app/widgets/application_window.rs:128
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while opening %1, with the following message: %2. "
-#| "If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while opening the current image, with the following "
 "message: %1. If the issue persists please report the problem."
 msgstr ""
-"Er is een i/o-fout opgetreden tijdens het ophalen van de afbeelding van %1. "
-"De precieze foutmelding is “%2”. Als het probleem zich blijft voortdoen, "
+"Er is een i/o-fout opgetreden tijdens het ophalen van de huidige afbeelding. "
+"De precieze foutmelding is “%1”. Als het probleem zich blijft voortdoen, "
 "maak hier dan melding van."
 
 #: src/app/widgets/application_window.rs:134
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Failed to open source URL"
 msgctxt "error-notification.title"
 msgid "Failed to open image"
-msgstr "Openen van bron-url mislukt"
+msgstr "Openen van afbeelding mislukt"
 
 #: src/app/widgets/application_window.rs:151
 msgctxt "alert.response"
