--- a/po/nl.po
+++ b/po/nl.po
@@ -9,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2025-04-04 08:39+0000\n"
 "Last-Translator: Vistaus <vistaus@noreply.codeberg.org>\n"
-"Language-Team: Dutch <https://translate.codeberg.org/projects/"
-"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
+"Language-Team: Dutch <https://translate.codeberg.org/projects/de-swsnr-"
+"pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -262,8 +262,11 @@ msgid "Set current image as wallpaper"
 msgstr "Stel de huidige afbeelding in als achtergrond"
 
 #: resources/ui/application-window.blp:102
+#, fuzzy
+#| msgctxt "main-window.toolbar.button.tooltip"
+#| msgid "Open image with default application"
 msgctxt "main-window.toolbar.button.tooltip"
-msgid "Open image with default application"
+msgid "Open image with external application"
 msgstr "Afbeelding openen in standaard fotoprogramma"
 
 #: resources/ui/application-window.blp:113
