--- a/po/et.po
+++ b/po/et.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-05 10:21+0000\n"
+"PO-Revision-Date: 2025-04-07 10:21+0000\n"
 "Last-Translator: Priit Jõerüüt <jrtcdbrg@noreply.codeberg.org>\n"
-"Language-Team: Estonian <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
+"Language-Team: Estonian <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -111,20 +111,19 @@ msgstr ""
 "piltide vahel."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:49
-#, fuzzy
-#| msgid ""
-#| "Add toolbar button to open the current image in an external application."
 msgid ""
 "Add toolbar buttons to save the current image, and to open the current image "
 "in an external application."
 msgstr ""
-"Lisa tööriistaribale nupp, mis võimaldab kuvatavat pilti avada välise "
-"rakendusega."
+"Lisa tööriistaribale nupp, mis võimaldab kuvatavat pilti salvestada ja avada "
+"välise rakendusega."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
 msgid ""
 "Try harder not to leave partially downloaded wallpapers behind when quitting."
 msgstr ""
+"Parandasime allaalaadimise kontrolli, et rakendusest väljumisel ei jääks "
+"alles pooleldi allalaaditud pilte."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:62
 msgid "Use a more reliable endpoint for Wikimedia images."
@@ -277,12 +276,9 @@ msgid "Open image with external application"
 msgstr "Ava pilt välise rakendusega"
 
 #: resources/ui/application-window.blp:108
-#, fuzzy
-#| msgctxt "shortcuts group title"
-#| msgid "Navigate images"
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Save image"
-msgstr "Liigu piltide vahel"
+msgstr "Salvesta pilt"
 
 #: resources/ui/application-window.blp:119
 msgctxt "main-window.toolbar.button.tooltip"
@@ -438,12 +434,12 @@ msgstr "Ava eelistused"
 #: src/app.rs:446
 msgctxt "command-line.option.description"
 msgid "Show image for DATE, parsed as ISO string"
-msgstr ""
+msgstr "Näita pilti kindlast KUUPÄEVast, kus KUUPÄEV on ISO vormingus"
 
 #: src/app.rs:451
 msgctxt "command-line.option.arg.description"
 msgid "DATE"
-msgstr ""
+msgstr "KUUPÄEV"
 
 #: src/app.rs:624
 msgctxt "portal.request-background.reason"
@@ -605,33 +601,22 @@ msgid "Failed to open image"
 msgstr "Ei õnnestunud avada pilti"
 
 #: src/app/widgets/application_window.rs:151
-#, fuzzy
-#| msgctxt "shortcut description"
-#| msgid "Load images"
 msgid "Saved image %1"
-msgstr "Laadi pilte"
+msgstr "%1 pilt on salvestatud"
 
 #: src/app/widgets/application_window.rs:169
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while opening the current image, with the following "
-#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while saving the current image, with the following "
 "message: %1. If the issue persists please report the problem."
 msgstr ""
-"Selle pildi avamisel tekkis sisend/väljundviga järgneva veateatega: %1. Kui "
-"viga kestab pikemalt, siis palun anna sellest meile teada."
+"Selle pildi salvestamisel tekkis sisend/väljundviga järgneva veateatega: %1. "
+"Kui viga kestab pikemalt, siis palun anna sellest meile teada."
 
 #: src/app/widgets/application_window.rs:175
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Failed to open image"
 msgctxt "error-notification.title"
 msgid "Failed to save image"
-msgstr "Ei õnnestunud avada pilti"
+msgstr "Ei õnnestunud salvestada pilti"
 
 #: src/app/widgets/application_window.rs:192
 msgctxt "alert.response"
@@ -659,12 +644,9 @@ msgid "Details"
 msgstr "Üksikasjad"
 
 #: src/app/widgets/application_window.rs:467
-#, fuzzy
-#| msgctxt "shortcuts group title"
-#| msgid "Navigate images"
 msgctxt "file-dialog.title"
 msgid "Save image"
-msgstr "Liigu piltide vahel"
+msgstr "Salvesta pilt"
 
 #: src/app/widgets/preferences_dialog.rs:71
 msgid "%1/%2 collection enabled"
