--- a/po/de.swsnr.pictureoftheday.pot
+++ b/po/de.swsnr.pictureoftheday.pot
@@ -105,7 +105,8 @@ msgstr ""
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
 msgid ""
-"Add Earth Science Picture of the Day and Earth Observatory Image of the Day."
+"Add Earth Science Picture of the Day and NASA Earth Observatory Image of the "
+"Day."
 msgstr ""
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:60
@@ -642,9 +643,9 @@ msgctxt "source name"
 msgid "Earth Science Picture of the Day"
 msgstr ""
 
-#: src/source.rs:71
+#: src/source.rs:74
 msgctxt "source name"
-msgid "Earth Observatory Image of the Day"
+msgid "NASA Earth Observatory Image of the Day"
 msgstr ""
 
 #: src/source/bing.rs:81
