--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-06 09:02+0000\n"
+"PO-Revision-Date: 2025-04-21 11:41+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,16 +43,12 @@ msgid "Your daily wallpaper"
 msgstr "Dein täglicher Bildschirmhintergrund"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:8
-#, fuzzy
-#| msgid ""
-#| "Get a picture of the day from the following sources as your daily "
-#| "wallpaper."
 msgid ""
 "Get a picture of the day from the following sources and use as your daily "
 "wallpaper."
 msgstr ""
-"Erhalte ein Bild des Tages aus den folgenden Quellen als täglichen "
-"Bildschirmhintergrund."
+"Erhalte ein Bild des Tages aus den folgenden Quellen und nutze es als "
+"täglichen Bildschirmhintergrund."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:10
 msgid "NASA Astronomy Picture of the Day"
@@ -67,16 +63,12 @@ msgid "Simon Stålenhag Artwork"
 msgstr "Simon Stålenhag Kunstwerke"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:13
-#, fuzzy
-#| msgid "Wikimedia Picture Of The Day"
 msgid "Wikimedia Picture of the Day"
 msgstr "Wikimedia Bild des Tages"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:14
-#, fuzzy
-#| msgid "NASA Astronomy Picture of the Day"
 msgid "Earth Science Picture of the Day"
-msgstr "NASA Astronomie Bild des Tages"
+msgstr "Earth Science Bild des Tages"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:15
 #, fuzzy
@@ -122,11 +114,11 @@ msgid "Artwork"
 msgstr "Kunstwerk"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
-#, fuzzy
-#| msgid "NASA Earth Observatory Image Of The Day"
 msgid ""
 "Add Earth Science Picture of the Day and Earth Observatory Image of the Day."
-msgstr "NASA Erdbeobachtung Bild des Tages"
+msgstr ""
+"Earth Science Bild des Tages und Earth Observatory Bild des Tages "
+"hinzugefügt."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:60
 msgid ""
@@ -460,12 +452,12 @@ msgstr "Einstellungen öffnen"
 #: src/app.rs:456
 msgctxt "command-line.option.description"
 msgid "Show image for the given date"
-msgstr ""
+msgstr "Bild für das angegebene Datum zeigen"
 
 #: src/app.rs:461
 msgctxt "command-line.option.arg.description"
 msgid "YYYY-MM-DD"
-msgstr ""
+msgstr "YYYY-MM-DD"
 
 #: src/app.rs:637
 msgctxt "portal.request-background.reason"
@@ -688,8 +680,6 @@ msgid "Picture Of The Day"
 msgstr "Bild des Tages"
 
 #: src/source.rs:66
-#, fuzzy
-#| msgid "NASA Astronomy Picture of the Day"
 msgctxt "source name"
 msgid "NASA Astronomy Picture of the Day"
 msgstr "NASA Astronomie Bild des Tages"
@@ -700,8 +690,6 @@ msgid "Bing"
 msgstr "Bing"
 
 #: src/source.rs:68
-#, fuzzy
-#| msgid "Wikimedia Picture Of The Day"
 msgctxt "source name"
 msgid "Wikimedia Picture of the Day"
 msgstr "Wikimedia Bild des Tages"
@@ -712,11 +700,9 @@ msgid "Simon Stålenhag"
 msgstr "Simon Stålenhag"
 
 #: src/source.rs:70
-#, fuzzy
-#| msgid "NASA Astronomy Picture of the Day"
 msgctxt "source name"
 msgid "Earth Science Picture of the Day"
-msgstr "NASA Astronomie Bild des Tages"
+msgstr "Earth Science Bild des Tages"
 
 #: src/source.rs:71
 #, fuzzy
@@ -734,11 +720,9 @@ msgid "All rights reserved."
 msgstr "Alle Rechte vorbehalten."
 
 #: src/source/eoiod.rs:37
-#, fuzzy
-#| msgid "NASA Earth Observatory Image Of The Day"
 msgctxt "source.eoiod.copyright"
 msgid "NASA Earth Observatory"
-msgstr "NASA Erdbeobachtung Bild des Tages"
+msgstr "NASA Erdobservatorium"
 
 #: src/source/stalenhag.rs:95
 msgctxt "source.stalenhag.copyright"
