--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-04-21 11:41+0000\n"
+"PO-Revision-Date: 2025-04-21 11:43+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -71,10 +71,8 @@ msgid "Earth Science Picture of the Day"
 msgstr "Earth Science Bild des Tages"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:15
-#, fuzzy
-#| msgid "NASA Earth Observatory Image Of The Day"
 msgid "NASA Earth Observatory Image of the Day"
-msgstr "NASA Erdbeobachtung Bild des Tages"
+msgstr "NASA-Erdobservatorium Bild des Tages"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:17
 msgid ""
@@ -114,15 +112,11 @@ msgid "Artwork"
 msgstr "Kunstwerk"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:50
-#, fuzzy
-#| msgid ""
-#| "Add Earth Science Picture of the Day and Earth Observatory Image of the "
-#| "Day."
 msgid ""
 "Add Earth Science Picture of the Day and NASA Earth Observatory Image of the "
 "Day."
 msgstr ""
-"Earth Science Bild des Tages und Earth Observatory Bild des Tages "
+"Earth Science Bild des Tages und NASA-Erdobservatorium Bild des Tages "
 "hinzugefügt."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:60
@@ -710,16 +704,11 @@ msgid "Earth Science Picture of the Day"
 msgstr "Earth Science Bild des Tages"
 
 #: src/source.rs:74
-#, fuzzy
-#| msgid "NASA Earth Observatory Image Of The Day"
 msgctxt "source name"
 msgid "NASA Earth Observatory Image of the Day"
-msgstr "NASA Erdbeobachtung Bild des Tages"
+msgstr "NASA-Erdobservatorium Bild des Tages"
 
 #: src/source/bing.rs:81
-#, fuzzy
-#| msgctxt "source.stalenhag.copyright"
-#| msgid "All rights reserved."
 msgctxt "source.bing.copyright"
 msgid "All rights reserved."
 msgstr "Alle Rechte vorbehalten."
@@ -727,7 +716,7 @@ msgstr "Alle Rechte vorbehalten."
 #: src/source/eoiod.rs:37
 msgctxt "source.eoiod.copyright"
 msgid "NASA Earth Observatory"
-msgstr "NASA Erdobservatorium"
+msgstr "NASA-Erdobservatorium"
 
 #: src/source/stalenhag.rs:95
 msgctxt "source.stalenhag.copyright"
